Updated all transient API resources with a the required approval count.
