# src/za.co.grindrodbank.a3s/MappingProfiles/RoleTransientResourceRoleTransientModelProfile.cs
@@ -17,7 +17,8 @@ namespace za.co.grindrodbank.a3s.MappingProfiles
             CreateMap<RoleTransientModel, RoleTransient>().ForMember(dest => dest.RState, opt => opt.MapFrom(src => src.R_State))
                                                           .ForMember(dest => dest.RoleId, opt => opt.MapFrom(src => src.RoleId))
                                                           .ForMember(dest => dest.Uuid, opt => opt.MapFrom(src => src.Id))
-                                                          .ForMember(dest => dest.ApprovalCount, opt => opt.MapFrom(src => src.ApprovalCount));
+                                                          .ForMember(dest => dest.ApprovalCount, opt => opt.MapFrom(src => src.ApprovalCount))
+                                                          .ForMember(dest => dest.RequirerdApprovalCount, opt => opt.MapFrom(src => src.RequiredApprovalCount));
             CreateMap<RoleTransient, RoleTransientModel>().ForMember(dest => dest.R_State, opt => opt.MapFrom(src => src.RState));
         }
     }
